# GeekStat

./: Procfile  geekstat_api.py  main.py  pyproject.toml  requirements.txt
GeekStat-api/: readme.md
GeekStat-api/front-end/: package-lock.json
GeekStat-api/problem_set/: problem_set.pkl
GeekStat-api/scripts/: recommend_q.py
backend/: .gitignore  pyproject.toml  readme.md  requirements.txt
backend/commander/: __init__.py  return_problemset_status.py
backend/database_driver/: __init__.py  database.py  services.py
backend/models/: __init__.py  problem.py  user.py
backend/problem_service/: __init__.py  codeforces.py
backend/recommendation_service/: __init__.py  recommendq.py
backend/user_service/: __init__.py
database/: adi_13.pkl
database_driver/: __init__.py  services.py
final_apis/: geekstat_api.py  readme.md  requirements.txt
final_apis/database/: adi_13.pkl  parvg555.pkl
final_apis/landing/: index.html
final_apis/scripts/: gen_usr.py  recommend_q.py
front-end/: package.json
front-end/src/: index.js
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.js
models/: __init__.py  problem.py  user.py
problem_service/: codeforces.py
recommendation system/.ipynb_checkpoints/: training_data_collection-checkpoint.ipynb
recommendation_service/: recommendq.py
scripts/: gen_usr.py
src/components/: RatingChart.js  Recommend.js
user_data/: adi_13.pkl  gen_usr.py  getting_rest_of_usr_data.ipynb  recommend_q.py  tourist.pkl  user_data_scraper.ipynb
user_service/: __init__.py  generate_user.py  user_service.py
(+20 files in other folders)
