[tool.poetry]
name = "geekstat"
version = "0.1.0"
description = "a competitive programming helper website"
authors = ["Aditya Ranaut"]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pymongo = {extras = ["srv"], version = "^4.2.0"}
schematics = "^2.1.1"

[tool.poetry.dev-dependencies]
tqdm = "^4.64.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
